--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">VEF</string>
+    <string name="roomcode">Room Code</string>
+    <string name="go_to_room">Go to Room</string>
+    <string name="could_not_find_room">Could not find room</string>
 </resources>
